--- a/doc/references.bib
+++ b/doc/references.bib
@@ -12,6 +12,32 @@
   number = {17}
 }
 
+@article{cartwright_lightsout:2021,
+  title = {The {{Week}} the {{Lights Went Out}} in {{Texas}}},
+  shorttitle = {Lights Out},
+  author = {Cartwright, Echo D.},
+  year = {2021},
+  volume = {37},
+  pages = {19--20},
+  issn = {2692-3823},
+  doi = {10.1002/gas.22223},
+  copyright = {Copyright \textcopyright{} 2021 Wiley Periodicals, Inc., A Wiley Company},
+  journal = {Climate and Energy},
+  language = {en},
+  number = {9}
+}
+% == BibTeX quality report for cartwright_lightsout:2021:
+% ? Title looks like it was stored in title-case in Zotero
+
+@techreport{ceser_winterupdate:2021,
+  title = {Extreme Cold \& Winter Weather Update \#1},
+  shorttitle = {Winter Update},
+  author = {{CESER}},
+  year = {2021},
+  month = feb,
+  institution = {{U.S. Department of Energy Office of Cybsersecurity, Energy Security, and Emergency Response}}
+}
+
 @article{chester_reliable:2020,
   title = {Keeping Infrastructure Reliable under Climate Uncertainty},
   shorttitle = {Reliable},
@@ -34,6 +60,15 @@
   year = {2016},
   address = {{Palisades, NY}},
   institution = {{Center for International Earth Science Information Network - CIESIN - Columbia University}}
+}
+
+@techreport{clack_uri:2021,
+  title = {{{ERCOT}} Winter Storm {{Uri}} Blackout Analysis ({{February}}, 2021)},
+  shorttitle = {Uri},
+  author = {Clack, Christopher T. M. and Choukulkar, Aditya and Cot{\'e}, Brianna and McKee, Sarah A},
+  year = {2021},
+  month = mar,
+  institution = {{Vibrant Clean Energy, LLC}}
 }
 
 @article{Cohen:2014gx,
@@ -74,6 +109,18 @@
   number = {6396}
 }
 
+@article{dobbins_blackoutdisparity:2021,
+  title = {Texas Blackouts Hit Minority Neighborhoods Especially Hard},
+  shorttitle = {Blackout Disparity},
+  author = {Dobbins, James and Tabuchi, Hiroko},
+  year = {2021},
+  month = feb,
+  issn = {0362-4331},
+  chapter = {Climate},
+  journal = {The New York Times},
+  language = {en-US}
+}
+
 @article{DossGollin:2019,
   title = {Robust Adaptation to Multiscale Climate Variability},
   author = {{Doss-Gollin}, James and Farnham, David J. and Steinschneider, Scott and Lall, Upmanu},
@@ -97,6 +144,33 @@
   month = jan,
   howpublished = {http://www.ercot.com/content/wcm/lists/172484/ERCOT\_Quick\_Facts\_01.17.19.pdf},
   journal = {Electricity Reliability Council of Texas}
+}
+
+@techreport{ercotpublic_outagesv1:2021,
+  title = {February 2021 Extreme Cold Weather Event: Preliminary Report on Causes of Generator Outages and Derates},
+  shorttitle = {Outages V1},
+  author = {{ERCOT}},
+  year = {2021},
+  month = apr,
+  institution = {{Electric Reliability Council of Texas}}
+}
+
+@techreport{ercotpublic_outagesv2:2021,
+  title = {Update to {{April}} 6, 2021 Preliminary Report on Causes of Generator Outages and Derates during the {{February}} 2021 Extreme Cold Weather Event},
+  shorttitle = {Outages V2},
+  author = {{ERCOT}},
+  year = {2021},
+  month = apr,
+  institution = {{Electric Reliability Council of Texas}}
+}
+
+@techreport{ercotpublic_sarawinter:2020,
+  title = {Final Seasonal Assessment of Resource Adequacy for the {{ERCOT}} Region ({{SARA}}): Winter 2020/2021},
+  shorttitle = {{{SARA}} Winter},
+  author = {{ERCOT}},
+  year = {2020},
+  month = nov,
+  institution = {{Electric Reliability Council of Texas}}
 }
 
 @techreport{everhart_iea:2021,
@@ -235,6 +309,15 @@
   number = {3-4}
 }
 
+@misc{magness_review:2021,
+  title = {Review of {{February}} 2021 Extreme Cold Weather Event},
+  shorttitle = {Review},
+  author = {Magness, Bill},
+  year = {2021},
+  month = feb,
+  language = {en}
+}
+
 @article{martins_gev:2001,
   title = {Historical Information in a Generalized Maximum Likelihood Framework with Partial Duration and Annual Maximum Series},
   shorttitle = {Gev},
@@ -305,6 +388,34 @@
   number = {12}
 }
 
+@article{mulcahy_urideath:2021,
+  title = {At Least 111 People Died in {{Texas}} during Winter Storm, Most from Hypothermia},
+  shorttitle = {Uri Death},
+  author = {Mulcahy, Shawn},
+  year = {2021},
+  month = mar,
+  journal = {The Texas Tribune},
+  language = {en}
+}
+
+@techreport{nerc_operation:1989,
+  title = {{{ERCOT}} Emergency Operation {{December}} 21-32, 1989},
+  shorttitle = {Operation},
+  author = {{NERC}},
+  year = {1989},
+  institution = {{North American Electric Reliability Corporation}}
+}
+
+@techreport{nerc_previous:2013,
+  title = {Assessment of Previous Severe Winter Weather Reports 1983-2011},
+  shorttitle = {Previous},
+  author = {{NERC}},
+  year = {2013},
+  month = jul,
+  address = {{Atlanta, GA}},
+  institution = {{North American Electric Reliability Corporation}}
+}
+
 @inbook{nielsen-gammon_txacc:2011,
   title = {The Changing Climate of {{Texas}}},
   shorttitle = {{{TX ACC}}},
@@ -320,6 +431,18 @@
 % == BibTeX quality report for nielsen-gammon_txacc:2011:
 % Missing required field 'chapter/pages'
 
+@article{osborne_twofreezes:2021,
+  title = {A Tale of Two Freezes: {{How}} the {{Texas}} Power Grid Stayed on in the 1989 Cold Snap},
+  shorttitle = {Two Freezes},
+  author = {Osborne, James},
+  year = {2021},
+  month = mar,
+  address = {{Houston, TX}},
+  chapter = {Energy},
+  journal = {Houston Chronicle},
+  language = {en-US}
+}
+
 @article{Screen:2013ho,
   title = {Exploring Links between {{Arctic Amplification}} and Mid-Latitude Weather},
   author = {Screen, James A and Simmonds, Ian},
@@ -331,6 +454,21 @@
   journal = {Geophysical Research Letters},
   language = {English},
   number = {5}
+}
+
+@article{smead_eyesoftx:2021,
+  title = {{{ERCOT}}--the Eyes of {{Texas}} (and the {{World}}) Are upon You: What Can Be Done to Avoid a {{February}} 2021 Repeat},
+  shorttitle = {Eyes of {{TX}}},
+  author = {Smead, Richard G.},
+  year = {2021},
+  volume = {37},
+  pages = {14--18},
+  issn = {2692-3823},
+  doi = {10.1002/gas.22228},
+  copyright = {Copyright \textcopyright{} 2021 Wiley Periodicals, Inc., A Wiley Company},
+  journal = {Climate and Energy},
+  language = {en},
+  number = {10}
 }
 
 @techreport{texaswaterplan:2012,
